--- a/editProfile.html
+++ b/editProfile.html
@@ -123,12 +123,12 @@
             <br/>
             <a href="editProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
             <br/>
-            <a class="rightMenuColor" onclick="myFunction('Demo1')">
+            <a class="rightMenuColor" onclick="myFunction('shops')">
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
                 &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
             </a>
-            <div id="Demo1" class="w3-container w3-hide ">
-                <a class="rightMenuColor" href="showShop.html"> &nbsp;فروشگاه اول</a>
+            <div id="shops" class="w3-container w3-hide ">
+                <a class="rightMenuColor" href="showShop.html"> &#160;فروشگاه اول</a>
                 <a class="rightMenuColor" href="#">&nbsp; فروشگاه دوم</a>
                 <a class="rightMenuColor" href="#"> &nbsp;فروشگاه سوم </a>
                 <a class="w3-center rightMenuColor" href="addShop.html"> <span class="glyphicon glyphicon-plus"></span>
