--- a/AdminMainPage.html
+++ b/AdminMainPage.html
@@ -65,22 +65,20 @@
 <nav class="w3-sidenav w3-mobile w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
     <div class="w3-margin ">
         <div class="w3-center " style="margin-top:8px !important">
-            <img class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
+            <img  class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
                  id="admin-img"
                  style="width:100px ; height:100px"/>
         </div>
         <br/>
         <a href="editProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
         <br/>
-        <a class="rightMenuColor" onclick="myFunction('Demo1')">
+        <a class="rightMenuColor" onclick="myFunction('shops')">
             <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
             &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
         </a>
-        <div id="Demo1" class="w3-container w3-hide ">
-            <a class="rightMenuColor" href="showShop.html"> &nbsp;فروشگاه اول</a>
-            <a class="rightMenuColor" href="#">&nbsp; فروشگاه دوم</a>
-            <a class="rightMenuColor" href="#"> &nbsp;فروشگاه سوم </a>
-            <a class="w3-center rightMenuColor" href="addShop.html"> <span class="glyphicon glyphicon-plus"></span>
+        <div id="shops" class="w3-container w3-hide ">
+
+            <a class="w3-center rightMenuColor" href="addShop.html" id="add"> <span class="glyphicon glyphicon-plus"></span>
                 &nbsp;جدید&nbsp;</a>
         </div>
         <br/>
@@ -136,6 +134,12 @@
 </footer>
 
 <script>
+    //Scripts for design and it's actions
+
+    /*
+    Function opening and closing subset of an tag
+    parameter is id
+     */
     function myFunction(id) {
         var x = document.getElementById(id);
         const y = document.getElementById("more");
@@ -147,17 +151,64 @@
             y.style.transform = "rotate(0deg)";
         }
     }
-</script>
 
-<script>
 
     $(document).ready(function () {
-        // alert(window.sessionStorage.avatar);
-        //در غیر اینصورت ها گذاشته شود
-        $("#admin-img").attr("src", window.sessionStorage.avatar);
-        $("#admin-name").text(window.sessionStorage.firstName+ " " + window.sessionStorage.lastName);
-        //فروشگاه ها رو هم میخواهم
 
+        //Fill in admin avatar and fullName
+        if ((typeof (window.sessionStorage.avatar) !== "undefined") && (typeof (window.sessionStorage.firstName) !== "undefined")
+            && (typeof (window.sessionStorage.lastName) !== "undefined")) {
+            $("#admin-img").attr("src", window.sessionStorage.avatar);
+            $("#admin-name").text(window.sessionStorage.firstName + " " + window.sessionStorage.lastName);
+        }
+
+        /*
+         Reading from session "shops" and filled the rightMenu sub myShops
+         */
+        if (typeof (window.sessionStorage.shops) !== "undefined") {
+
+            var shop_var = JSON.parse(window.sessionStorage.shops);
+            for (let val of shop_var) {
+                const a = document.createElement("a");
+                const aTextName = document.createTextNode( val.name );
+                const attrClass = document.createAttribute("class");
+                attrClass.value = "rightMenuColor";
+                const attrHref = document.createAttribute("href");
+                attrHref.value = "showShop.html";
+                const attrId = document.createAttribute("id");
+                attrId.value = val.id;
+                a.setAttributeNode(attrClass);
+                a.setAttributeNode(attrHref);
+                a.setAttributeNode(attrId);
+                a.appendChild(aTextName);
+                const addA = document.getElementById("add");
+                const myShops = document.getElementById("shops");
+                myShops.insertBefore(a, addA);
+
+            }
+        }
+
+        //Go to AdminMainPage by clicking on picture
+        $("#admin-img").click(function () {
+            window.location.href = "AdminMainPage.html"
+        });
+
+
+        //Getting id of selected subset shop
+        const my_shop = document.getElementById("shops");
+        for (let val of (my_shop.childNodes)) {
+            if (val.id == "add")
+                return ;
+            val.addEventListener("click", function () {
+                window.sessionStorage.setItem("selectShop", val.id);
+            })
+        }
+
+
+        /*
+         Request for logout
+         send authorization in header
+         */
         $("#logout").click(function () {
             var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
             if (logout_var ==true){
