--- a/addShop.html
+++ b/addShop.html
@@ -118,9 +118,9 @@
     <nav class="w3-sidenav w3-mobile w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
         <div class="w3-margin ">
             <div class="w3-center " style="margin-top:8px !important">
-                <img class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
-                     id="admin-img"
-                     style="width:100px ; height:100px"/>
+                <img  class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
+                      id="admin-img"
+                      style="width:100px ; height:100px"/>
             </div>
             <br/>
             <a href="editProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
@@ -129,7 +129,8 @@
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
                 &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
             </a>
-            <div  class="w3-container w3-hide" id="shops">
+            <div id="shops" class="w3-container w3-hide ">
+
                 <a class="w3-center rightMenuColor" href="addShop.html" id="add"> <span class="glyphicon glyphicon-plus"></span>
                     &nbsp;جدید&nbsp;</a>
             </div>
@@ -160,7 +161,7 @@
             <br/>
             <div class="rightMenuColor">
                 <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
-                                                         style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
+                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
                 </a>
             </div>
             <br/>
@@ -317,8 +318,8 @@
                     a.setAttributeNode(attrId);
                     a.appendChild(aTextName);
                     const addA = document.getElementById("add");
-                    const  saba= document.getElementById("shops");
-                    saba.insertBefore(a, addA);
+                    const myShops = document.getElementById("shops");
+                    myShops.insertBefore(a, addA);
 
                 }
             }
