--- a/PatronMainPage.html
+++ b/PatronMainPage.html
@@ -72,14 +72,12 @@
         <br/>
         <a href="showProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
         <br/>
-        <a class="rightMenuColor" onclick="myFunction('Demo1')">
+        <a class="rightMenuColor" onclick="myFunction('shops')">
             <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
             &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
         </a>
-        <div id="Demo1" class="w3-container w3-hide ">
-            <a class="rightMenuColor" href="showShop.html"> &nbsp;فروشگاه اول</a>
-            <a class="rightMenuColor" href="#">&nbsp; فروشگاه دوم</a>
-            <a class="rightMenuColor" href="#"> &nbsp;فروشگاه سوم </a>
+        <div id="shops" class="w3-container w3-hide ">
+
         </div>
         <br/>
         <div class="rightMenuColor">
@@ -126,6 +124,12 @@
 </footer>
 
 <script>
+    //Scripts for design and it's actions
+
+    /*
+    Function opening and closing subset of an tag
+    parameter is id
+     */
     function myFunction(id) {
         var x = document.getElementById(id);
         const y = document.getElementById("more");
@@ -137,16 +141,58 @@
             y.style.transform = "rotate(0deg)";
         }
     }
-</script>
 
-<script>
 
     $(document).ready(function () {
-        // alert(window.sessionStorage.avatar);
-        //در غیر اینصورت ها گذاشته شود
-        $("#admin-img").attr("src", window.sessionStorage.avatar);
-        $("#admin-name").text(window.sessionStorage.firstName+ " " + window.sessionStorage.lastName);
-        //فروشگاه ها رو هم میخواهم
+
+        //Go to PatronMainPage by clicking on picture
+        $("#admin-img").click(function () {
+            window.location.href = "PatronMainPage.html"
+        });
+
+
+        //Fill in admin avatar and fullName
+        if ((typeof (window.sessionStorage.avatar) !== "undefined") && (typeof (window.sessionStorage.firstName) !== "undefined")
+            && (typeof (window.sessionStorage.lastName) !== "undefined")) {
+            $("#admin-img").attr("src", window.sessionStorage.avatar);
+            $("#admin-name").text(window.sessionStorage.firstName + " " + window.sessionStorage.lastName);
+        }
+
+        /*
+         Reading from session "shops" and filled the rightMenu sub myShops
+         */
+        if (typeof (window.sessionStorage.shops) !== "undefined") {
+
+            var shop_var = JSON.parse(window.sessionStorage.shops);
+            for (let val of shop_var) {
+                const a = document.createElement("a");
+                const aTextName = document.createTextNode( val.name );
+                const attrClass = document.createAttribute("class");
+                attrClass.value = "rightMenuColor";
+                const attrHref = document.createAttribute("href");
+                attrHref.value = "showShop.html";
+                const attrId = document.createAttribute("id");
+                attrId.value = val.id;
+                a.setAttributeNode(attrClass);
+                a.setAttributeNode(attrHref);
+                a.setAttributeNode(attrId);
+                a.appendChild(aTextName);
+                const myShops = document.getElementById("shops");
+                myShops.append(a);
+
+            }
+        }
+
+
+        //Getting id of selected subset shop
+        const my_shop = document.getElementById("shops");
+        for (let val of (my_shop.childNodes)) {
+            if (val.id == "add")
+                return ;
+            val.addEventListener("click", function () {
+                window.sessionStorage.setItem("selectShop", val.id);
+            })
+        }
 
 
         /*
@@ -185,12 +231,10 @@
             }
         });
 
-
     });
 
 
 </script>
-
 
 </body>
 </html>
