--- a/pollPage.html
+++ b/pollPage.html
@@ -125,17 +125,15 @@
             <br/>
             <a href="showProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
             <br/>
-            <a class="rightMenuColor" onclick="myFunction('Demo1')">
+            <a class="rightMenuColor" onclick="myFunction('shops')">
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
                 &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
             </a>
-            <div id="Demo1" class="w3-container w3-hide ">
-                <a class="rightMenuColor" href="showShop.html"> &nbsp;فروشگاه اول</a>
-                <a class="rightMenuColor" href="#">&nbsp; فروشگاه دوم</a>
-                <a class="rightMenuColor" href="#"> &nbsp;فروشگاه سوم </a>
+            <div id="shops" class="w3-container w3-hide ">
+
             </div>
             <br/>
-            <div class="rightMenuColor" >
+            <div class="rightMenuColor">
                 <a href="pollPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
                                                                      style="color:#7B8084"></span>&nbsp;&nbsp; اعمال نظرسنجی </a>
             </div>
@@ -153,7 +151,7 @@
             <br/>
             <div class="rightMenuColor">
                 <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
-                                                         style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
+                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
                 </a>
             </div>
             <br/>
@@ -211,9 +209,15 @@
     </footer>
 
     <script>
+        //Scripts for design and it's actions
+
+        /*
+        Function opening and closing subset of an tag
+        parameter is id
+         */
         function myFunction(id) {
             var x = document.getElementById(id);
-            const y =document.getElementById("more");
+            const y = document.getElementById("more");
             y.style.transform = "rotate(180deg)";
             if (x.className.indexOf("w3-show") == -1) {
                 x.className += " w3-show";
@@ -222,6 +226,99 @@
                 y.style.transform = "rotate(0deg)";
             }
         }
+
+
+        $(document).ready(function () {
+
+            //Go to PatronMainPage by clicking on picture
+            $("#admin-img").click(function () {
+                window.location.href = "PatronMainPage.html"
+            });
+
+
+            //Fill in admin avatar and fullName
+            if ((typeof (window.sessionStorage.avatar) !== "undefined") && (typeof (window.sessionStorage.firstName) !== "undefined")
+                && (typeof (window.sessionStorage.lastName) !== "undefined")) {
+                $("#admin-img").attr("src", window.sessionStorage.avatar);
+                $("#admin-name").text(window.sessionStorage.firstName + " " + window.sessionStorage.lastName);
+            }
+
+            /*
+             Reading from session "shops" and filled the rightMenu sub myShops
+             */
+            if (typeof (window.sessionStorage.shops) !== "undefined") {
+
+                var shop_var = JSON.parse(window.sessionStorage.shops);
+                for (let val of shop_var) {
+                    const a = document.createElement("a");
+                    const aTextName = document.createTextNode( val.name );
+                    const attrClass = document.createAttribute("class");
+                    attrClass.value = "rightMenuColor";
+                    const attrHref = document.createAttribute("href");
+                    attrHref.value = "showShop.html";
+                    const attrId = document.createAttribute("id");
+                    attrId.value = val.id;
+                    a.setAttributeNode(attrClass);
+                    a.setAttributeNode(attrHref);
+                    a.setAttributeNode(attrId);
+                    a.appendChild(aTextName);
+                    const myShops = document.getElementById("shops");
+                    myShops.append(a);
+
+                }
+            }
+
+
+            //Getting id of selected subset shop
+            const my_shop = document.getElementById("shops");
+            for (let val of (my_shop.childNodes)) {
+                if (val.id == "add")
+                    return ;
+                val.addEventListener("click", function () {
+                    window.sessionStorage.setItem("selectShop", val.id);
+                })
+            }
+
+
+            /*
+             Request for logout
+             send authorization in header
+             */
+            $("#logout").click(function () {
+                var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
+                if (logout_var ==true){
+                    $.get("address.txt", function (data) {
+                        const my_address = data + "/salesman/logout/";
+                        $.ajax({
+                            type: 'POST',
+                            dataType: 'json',
+                            contentType: 'application/json',
+                            url: my_address,
+                            headers:{
+                                'Authorization' : window.sessionStorage.token
+                            },
+                            data: JSON.stringify({}),
+                            success: function (resultData, status, xhr) {
+                                alert(resultData.message);
+                                if (resultData.result.toString() === "true") {
+                                    window.location.href="HomePage.html";
+                                }
+                            },
+                            error: function () {
+                                alert(" اتصال به اینترنت برقرار نیست. ");
+                            }
+                        })
+
+                    });
+
+                }else{
+                    alert(" از این که همراه ما خواهید بود متشکریم. ");
+                }
+            });
+
+        });
+
+
     </script>
 
     <script>
