--- a/showProfile.html
+++ b/showProfile.html
@@ -112,44 +112,50 @@
         }
 
     </style>
-    <nav class="w3-sidenav w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
+
+    <nav class="w3-sidenav w3-mobile w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
         <div class="w3-margin ">
             <div class="w3-center " style="margin-top:8px !important">
-                <img class="w3-center w3-closenav w3-xlarge " src="avatar/man-with-tie.png" style="width:100px ; height:100px" />
+                <img class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
+                     id="admin-img"
+                     style="width:100px ; height:100px"/>
             </div>
-            <br />
-            <a href="editProfile.html" class="rightMenuColor w3-center"> &nbsp;نام کاربر</a>
-            <br />
-            <a class="rightMenuColor" onclick="myFunction('Demo1')">
+            <br/>
+            <a href="showProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
+            <br/>
+            <a class="rightMenuColor" onclick="myFunction('shops')">
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
-                &nbsp;<span class="glyphicon glyphicon-chevron-down " id="more" style="color:#7B8084;margin-top:2px"></span>
+                &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
             </a>
-            <div id="Demo1" class="w3-container w3-hide ">
-                <a href="showShop.html" class="rightMenuColor"> &nbsp;فروشگاه اول</a>
-                <a href="showShop.html" class="rightMenuColor">&nbsp; فروشگاه دوم</a>
-                <a href="showShop.html" class="rightMenuColor"> &nbsp;فروشگاه سوم </a>
-                <a href="addShop.html" class="w3-center rightMenuColor">
-                    <span class="glyphicon glyphicon-plus"></span> &nbsp;جدید&nbsp;
+            <div id="shops" class="w3-container w3-hide ">
+
+            </div>
+            <br/>
+            <div class="rightMenuColor">
+                <a href="pollPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
+                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; اعمال نظرسنجی </a>
+            </div>
+            <br/>
+            <div class="rightMenuColor">
+                <a href="salePage.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
+                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; اعمال تخفیف </a>
+            </div>
+            <br/>
+            <div class="rightMenuColor">
+                <a href="supportPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone"
+                                                                        style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی
                 </a>
             </div>
-            <br />
+            <br/>
             <div class="rightMenuColor">
-                <a href="showPoll.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal" style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های من </a>
-            </div><br />
-            <div class="rightMenuColor">
-                <a href="ShowDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd" style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من </a>
-            </div><br />
-            <div class="rightMenuColor">
-                <a href="advertisementPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; تبلیغات </a>
-            </div><br />
-            <div class="rightMenuColor">
-                <a href="support.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی </a>
-            </div><br />
-            <div class="rightMenuColor">
-                <a href="HomePage.html" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off" style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل </a>
-            </div><br />
+                <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
+                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
+                </a>
+            </div>
+            <br/>
         </div>
     </nav>
+
     <header class="w3-container navigationBarColor ">
         <span class="w3-opennav w3-xlarge w3-right" id="rightMenu_open_btn">&#9776;</span>
         <div class="text-center">
@@ -306,9 +312,15 @@
     </footer>
 
     <script>
+        //Scripts for design and it's actions
+
+        /*
+        Function opening and closing subset of an tag
+        parameter is id
+         */
         function myFunction(id) {
             var x = document.getElementById(id);
-            const y =document.getElementById("more");
+            const y = document.getElementById("more");
             y.style.transform = "rotate(180deg)";
             if (x.className.indexOf("w3-show") == -1) {
                 x.className += " w3-show";
@@ -318,9 +330,98 @@
             }
         }
 
-        // window.closed = function() {
-        //     localStorage.clear();
-        // };
+
+        $(document).ready(function () {
+
+            //Go to PatronMainPage by clicking on picture
+            $("#admin-img").click(function () {
+                window.location.href = "PatronMainPage.html"
+            });
+
+
+            //Fill in admin avatar and fullName
+            if ((typeof (window.sessionStorage.avatar) !== "undefined") && (typeof (window.sessionStorage.firstName) !== "undefined")
+                && (typeof (window.sessionStorage.lastName) !== "undefined")) {
+                $("#admin-img").attr("src", window.sessionStorage.avatar);
+                $("#admin-name").text(window.sessionStorage.firstName + " " + window.sessionStorage.lastName);
+            }
+
+            /*
+             Reading from session "shops" and filled the rightMenu sub myShops
+             */
+            if (typeof (window.sessionStorage.shops) !== "undefined") {
+
+                var shop_var = JSON.parse(window.sessionStorage.shops);
+                for (let val of shop_var) {
+                    const a = document.createElement("a");
+                    const aTextName = document.createTextNode( val.name );
+                    const attrClass = document.createAttribute("class");
+                    attrClass.value = "rightMenuColor";
+                    const attrHref = document.createAttribute("href");
+                    attrHref.value = "showShop.html";
+                    const attrId = document.createAttribute("id");
+                    attrId.value = val.id;
+                    a.setAttributeNode(attrClass);
+                    a.setAttributeNode(attrHref);
+                    a.setAttributeNode(attrId);
+                    a.appendChild(aTextName);
+                    const myShops = document.getElementById("shops");
+                    myShops.append(a);
+
+                }
+            }
+
+
+            //Getting id of selected subset shop
+            const my_shop = document.getElementById("shops");
+            for (let val of (my_shop.childNodes)) {
+                if (val.id == "add")
+                    return ;
+                val.addEventListener("click", function () {
+                    window.sessionStorage.setItem("selectShop", val.id);
+                })
+            }
+
+
+            /*
+             Request for logout
+             send authorization in header
+             */
+            $("#logout").click(function () {
+                var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
+                if (logout_var ==true){
+                    $.get("address.txt", function (data) {
+                        const my_address = data + "/salesman/logout/";
+                        $.ajax({
+                            type: 'POST',
+                            dataType: 'json',
+                            contentType: 'application/json',
+                            url: my_address,
+                            headers:{
+                                'Authorization' : window.sessionStorage.token
+                            },
+                            data: JSON.stringify({}),
+                            success: function (resultData, status, xhr) {
+                                alert(resultData.message);
+                                if (resultData.result.toString() === "true") {
+                                    window.location.href="HomePage.html";
+                                }
+                            },
+                            error: function () {
+                                alert(" اتصال به اینترنت برقرار نیست. ");
+                            }
+                        })
+
+                    });
+
+                }else{
+                    alert(" از این که همراه ما خواهید بود متشکریم. ");
+                }
+            });
+
+        });
+
+
     </script>
 
     <script>
